can't solve column glitch on mobile. Instead, I'll just make all problem sets a multiple of 6

--- a/css/custom.css
+++ b/css/custom.css
@@ -30,17 +30,13 @@ p {
 }
 
 .pbox {
-  box-sizing: border-box;
   background-color: #fff;
   border-radius: 0px;
   border: 2px solid rgb(0, 0, 0);
-  /*margin: 0px 10px 20px 10px;*/
-  padding: 10px 10px 10px 10px;
+  margin: 0px 0px 20px 0px;
+  padding: 10px 10px 10px 10px;;
   z-index: 1;
   text-align: center;
-  width: 33%;
-  display: block;
-  float: left;
 }
 
 .roundbox {
@@ -74,6 +70,9 @@ input {
 
 ol, ul {
   list-style: none;
+}
+.problem-list {
+  columns: 3;
 }
 /*
 .link {
@@ -185,6 +184,9 @@ ol, ul {
 }
 /*smaller than tablet*/
 @media screen and (max-width: 900px) {
+  .problem-list {
+    columns: 2;
+  }
   .lg-view {
     display:none;
   }
@@ -196,5 +198,7 @@ ol, ul {
 
 /*smaller than phone*/
 @media screen and (max-width: 600px) {
-
+  .problem-list {
+    columns: 1
+  }
 }
